--- a/17_style-layer/mimic.html
+++ b/17_style-layer/mimic.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!-- 
+CAD - Caden, Aditya, Danny
+SoftDev
+K17 - Style-layer - Exploring CSS
+2024 - 10 - 16
+time: 1 hr
+-->
 <html lang="en">
   <head>
     <title>CAD</title>
