--- a/28_js-dom/index.html
+++ b/28_js-dom/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <!--
-    Team Phantom Tollbooth :: Clyde Sinclair, Fierce Dragon
-    SoftDev pd0
-    K28 -- Manipulating the DOM
+    Team JD :: Jayden Zhang, Danny Huang
+    SoftDev pd5
+    K28 -- Getting more comfortable with the dev console and the DOM
     2025-01-07t
-  --------------------------------------------------
+     --------------------------------------------------
   -->
 
 <html lang="en">
